--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
           name: Install Dependencies
           command: npm install
       - run:
-          name: Run tests
-          command: npm run test
+          name: Run tests with coverage
+          command: npm run test:coverage
       - run:
           when: on_success
           command: |
