--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.20.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "3.4.4"
   },
   "devDependencies": {
